Update export